--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URL=mongodb://127.0.0.1:27017/zappos_project
+MONGODB_URL=mongodb+srv://rushigaware1020:yTRqIIQViFB2Ju2h@cluster0.4qhnv.mongodb.net/zoppos?retryWrites=true&w=majority&appName=Cluster0
 SECREAT_KEY=masai
